--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "prettier": "^1.3.1",
     "react": "16.0.0-alpha.6",
     "react-native": "^0.44.0",
+    "prop-types": "^15.5.10",
     "tslint": "^5.2.0",
     "tslint-react": "^3.0.0",
     "typescript": "^2.3.2"
@@ -45,7 +46,8 @@
   "peerDependencies": {
     "react": ">=15.1 || >=16.0.0-alpha.6",
     "react-native-vector-icons": "^4.3.0",
-    "react-native": ">=0.40"
+    "react-native": ">=0.40",
+    "prop-types": "^15.5.10"
   },
   "dependencies": {
     "react-native-vector-icons": "^4.3.0",
